--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch-build": "webpack --watch --build",
+    "start-server": "node app.js",
+    "start-dev": "npm run watch-build && npm run start-server"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,7 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.9",
     "webpack-cli": "^3.1.2"
   }
 }
