--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch-build": "webpack --watch --build",
-    "start-server": "node app.js",
-    "start-dev": "npm run watch-build && npm run start-server"
+    "start-server": "nodemon app.js",
+    "start-dev": "npm run watch-build & npm run start-server"
   },
   "repository": {
     "type": "git",
