--- a/package.json
+++ b/package.json
@@ -22,11 +22,19 @@
   "homepage": "https://github.com/peter-traversa/unique-inventory-solutions#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "webpack": "^4.27.1"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
+    "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2"
   }
 }
