--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/peter-traversa/unique-inventory-solutions#readme",
   "dependencies": {
+    "babel-register": "^6.26.0",
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -28,11 +29,12 @@
     "webpack-livereload-plugin": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
