--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/peter-traversa/unique-inventory-solutions#readme",
   "dependencies": {
     "babel-register": "^6.26.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
