--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "eslint": "^5.15.1",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
     "webpack": "^4.28.3",
