--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,7 +1,6 @@
-
 branch-defaults:
   eslint:
-    environment: null
+    environment: unique-inventory-dev
     group_suffix: null
 environment-defaults:
   unique-inventory-test:
@@ -11,7 +10,7 @@ global:
   application_name: unique-inventory
   branch: null
   default_ec2_keyname: aws-eb
-  default_platform: node.js
+  default_platform: Node.js
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
