--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "babel-register": "^6.26.0",
+    "dotenv": "^6.2.0",
     "eslint": "^5.15.1",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
