--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "babel-loader": "^8.0.4",
     "babel-register": "^6.26.0",
     "dotenv": "^6.2.0",
-    "eslint": "^5.15.1",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
@@ -46,7 +45,11 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "eslint": "^5.15.1",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.9",
     "webpack": "^4.28.3",
