--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch-build": "webpack --watch --build",
-    "start-server": "nodemon app.js",
-    "start-dev": "npm run watch-build & npm run start-server"
+    "build:dev": "webpack --watch",
+    "build:prod": "NODE_ENV=production ENV_TAG=production webpack",
+    "dev": "NODE_ENV=development ENV_TAG=development concurrently --kill-others \"npm run server:dev\" \"npm run build:dev\"",
+    "dev:local": "NODE_ENV=development ENV_TAG=local concurrently --kill-others \"npm run server:dev\" \"npm run build:dev\"",
+    "server:dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,22 +21,9 @@
   },
   "homepage": "https://github.com/peter-traversa/unique-inventory-solutions#readme",
   "dependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "babel-register": "^6.26.0",
-    "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.9",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "webpack": "^4.28.3",
-    "webpack-dev-middleware": "^3.6.0",
-    "webpack-livereload-plugin": "^2.2.0"
+    "react-dom": "^16.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -45,6 +32,8 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "concurrently": "^4.1.1",
+    "custom-env": "^1.0.2",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
